# rust-simple-api

./: Cargo.toml
